name:                mini-scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Mini Scheme Interpreter in Haskell
homepage:            https://github.com/nwtgck/mini-scheme-haskell
license:             BSD3
license-file:        LICENSE
author:              Ryo Ota
maintainer:          nwtgck@gmail.com
copyright:           2017 Ryo Ota
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheme, SchemeParser
  build-depends:       base >= 4.7 && < 5
                     , either
                     , MissingH
                     , parsec
                     , mtl
                     , dlist
                     , containers
  default-language:    Haskell2010

executable mini-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mini-scheme
                     , either
                     , MissingH
                     , parsec
                     , mtl
                     , dlist
                     , containers
  default-language:    Haskell2010

test-suite mini-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mini-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/mini-scheme
